platform_versioned_docs/version-4.7.0/use-platform/virtual-clusters/key-features/sleep-mode.mdx
---
title: Auto sleep and auto delete
sidebar_label: Auto Sleep & Auto Delete
sidebar_position: 1
sidebar_class_name: pro
---

:::info
Platform auto sleep has been integrated into the standard sleep configuration and is no longer a separate feature.
:::

# Auto sleep and auto delete for virtual clusters

The platform provides two features to reduce Kubernetes costs:

- **Auto Sleep** puts virtual clusters to sleep when nobody is using them. This removes all pods while keeping all resources inside the virtual clusters during periods of inactivity.
- **Auto-delete** deletes virtual clusters that have been idle for a while.

Both features rely on the platform's inactivity detection.

## Configure auto sleep

Auto sleep can be configured per virtual cluster instance. When enabled, the platform monitors activity and puts the virtual cluster to sleep after a configured period of inactivity.

To configure auto sleep in the Platform UI:

1. Navigate to the **Virtual Clusters** view.
2. Select the virtual cluster you want to configure.
3. Click **Edit** and navigate to the **Sleep Mode** section.
4. Enable auto sleep and configure the inactivity timeout.
5. Click **Save**.

You can also start sleep manually from the virtual cluster's ellipsis menu in the Platform UI.

For detailed vCluster-specific sleep mode configuration and examples, including `vcluster.yaml` settings, scheduled sleep, and advanced configuration, see the [vCluster sleep mode documentation](/docs/vcluster/configure/vcluster-yaml/sleep).

## Configure auto-delete

The platform lets you configure auto-delete for virtual clusters that have not been used for a certain period of time.

To configure auto-delete in the Platform UI:

1. Navigate to the **Virtual Clusters** view.
2. Select the virtual cluster you want to configure.
3. Click **Edit** and navigate to the **Auto-Delete** section.
4. Enable auto-delete and configure the inactivity timeout.
5. Click **Save**.

For detailed configuration options, see the [vCluster auto-delete documentation](/docs/vcluster/configure/vcluster-yaml/sleep#configure-auto-delete).

## Inactivity detection

All requests that are made through the platform count as activity in the virtual cluster. This includes `kubectl` requests, API requests, and access through the platform UI.

The platform tracks activity based on requests that are proxied through the platform. Direct access to the virtual cluster API server (for example, via ingress access) is not tracked by the platform's inactivity detection.

If you need more advanced activity detection, see the [vCluster sleep mode documentation](/docs/vcluster/configure/vcluster-yaml/sleep) for configuration options including custom activity annotations.
