platform_versioned_docs/version-4.10.0/use-platform/virtual-clusters/key-features/sleep-mode.mdx
---
title: Auto sleep and auto delete
sidebar_label: Auto Sleep & Auto Delete
sidebar_position: 1
sidebar_class_name: pro
---
import FeatureTable from '@site/src/components/FeatureTable';

<FeatureTable names="vcluster-sleep-mode" />


:::info
Platform auto sleep has been integrated into the standard sleep configuration and is no longer a separate feature.
:::

# Auto sleep and auto delete for tenant clusters

The platform provides two features to reduce Kubernetes costs:

- **Auto Sleep** puts tenant clusters to sleep when nobody is using them. This removes all pods while keeping all resources inside the tenant clusters during periods of inactivity.
- **Auto-delete** deletes tenant clusters that have been idle for a while.

Both features rely on the platform's inactivity detection.

## Configure auto sleep

Auto sleep can be configured per tenant cluster instance. When enabled, the platform monitors activity and puts the tenant cluster to sleep after a configured period of inactivity.

To configure auto sleep in the Platform UI:

1. Navigate to the **Tenant Clusters** view.
2. Select the tenant cluster you want to configure.
3. Click **Edit** and navigate to the **Sleep Mode** section.
4. Enable auto sleep and configure the inactivity timeout.
5. Click **Save**.

You can also start sleep manually from the tenant cluster's three-dot menu in the Platform UI.

For detailed vCluster-specific sleep mode configuration and examples, including `vcluster.yaml` settings, scheduled sleep, and advanced configuration, see the [vCluster sleep mode documentation](/docs/vcluster/configure/vcluster-yaml/sleep).

## Configure auto-delete

The platform lets you configure auto-delete for tenant clusters that have not been used for a certain period of time.

To configure auto-delete in the Platform UI:

1. Navigate to the **Tenant Clusters** view.
2. Select the tenant cluster you want to configure.
3. Click **Edit** and navigate to the **Auto-Delete** section.
4. Enable auto-delete and configure the inactivity timeout.
5. Click **Save**.

For detailed configuration options, see the [vCluster auto-delete documentation](/docs/vcluster/configure/vcluster-yaml/sleep#configure-auto-delete).

## Inactivity detection

All requests that are made through the platform count as activity in the tenant cluster. This includes `kubectl` requests, API requests, and access through the platform UI.

The platform tracks activity based on requests that are proxied through the platform. Direct access to the tenant cluster API server (for example, through ingress access) is not tracked by the platform's inactivity detection.

Gateway API HTTPRoute endpoints can participate in auto sleep when the selected Gateway controller supports request mirroring. Gateway endpoints may still be usable when request mirroring is not supported, but automatic wakeup from HTTP traffic is not available through that controller. If Gateway API CRDs are installed after vCluster Platform is already running, restart Platform with `kubectl rollout restart deployment/loft -n vcluster-platform` so Gateway API sleep-mode controllers are discovered.

If you need more advanced activity detection, see the [vCluster sleep mode documentation](/docs/vcluster/configure/vcluster-yaml/sleep) for configuration options including custom activity annotations and Gateway API caveats.
